--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,22 @@
 {
-    "name": "twinsen/inkyemails",
-    "description": "",
-    "require": {
-        "php": "~5.5.0|~5.6.0|~7.0.0",
-        
-        "magento/magento-composer-installer": "*",
-        "hampe/inky": "1.3.6.2"
-    },
-    "suggest": {
-
-    },
-    "type": "magento2-module",
-    "version": "1.0.0",
-    "license": [
-
+    "name": "magentohackathon/m2-wordpdf",
+    "description": "Manage product attribute permissions.",
+    "license": "GPL-3.0",
+    "authors": [
+        {
+            "email": "info@mage2gen.com",
+            "name": "Mage2Gen"
+        }
     ],
+    "type": "magento2-module",
+    "minimum-stability": "dev",
+    "require": {},
     "autoload": {
         "files": [
             "registration.php"
         ],
         "psr-4": {
-            "Twinsen\\InkyEmails\\": ""
+            "MagentoHackathon\\WordPdf\\": ""
         }
-    },
-    "extra": {
-        "map": [
-            [
-                "*",
-                "Twinsen/InkyEmails"
-            ]
-        ]
     }
 }
